adds describe feature
